@@ -1,35 +1,18 @@
 node('Jenkins-Agent') {
-    def resolvedAntHome = tool name: 'apache-ant-1.10.14', type: 'hudson.tasks.Ant$AntInstallation'
-    def resolvedJdkHome = tool name: 'jdk-17.0.2', type: 'hudson.model.JDK'
-
-    withEnv([
-            "ANT_HOME=${resolvedAntHome}"
-            ,"JAVA_HOME=${resolvedJdkHome}"
-            ,"PATH=${resolvedAntHome}/bin;${resolvedJdkHome}/bin;${env.PATH}"
-//            ,"ANT_OPTS=-XX:PermSize=512m -XX:MaxPermSize=512m"
-    ]) {
-        stage('Checkout') {
-            checkout([
-                    $class                           : 'GitSCM',
-                    branches                         : [[name: 'origin/master']],
-                    doGenerateSubmoduleConfigurations: false,
-                    extensions                       : [
-                            [$class: 'CheckoutOption', timeout: 15],
-                            [$class: 'CloneOption', timeout: 15, shallow: true]
-                    ],
-                    submoduleCfg                     : [],
-                    userRemoteConfigs                : [[url: 'https://github.com/dstaflund/ant-sample.git']]
-            ])
-        }
-        stage('Build') {
-            dir("./ant-sample") {
-                bat "${env.ANT_HOME}\\bin\\ant.bat -f ${env.WORKSPACE}\\build.xml"
-            }
-        }
-        stage('Run'){
-            dir("./ant-sample"){
-                bat "${env.JAVA_HOME}\\bin\\java.exe -jar ${env.WORKSPACE}\\build\\jar\\ant-sample.jar"
-            }
-        }
+    stage('Checkout') {
+        checkout([
+                $class                           : 'GitSCM',
+                branches                         : [[name: 'origin/master']],
+                doGenerateSubmoduleConfigurations: false,
+                extensions                       : [
+                        [$class: 'CheckoutOption', timeout: 15],
+                        [$class: 'CloneOption', timeout: 15, shallow: true]
+                ],
+                submoduleCfg                     : [],
+                userRemoteConfigs                : [[url: 'https://github.com/dstaflund/ant-sample.git']]
+        ])
     }
+
+    def flow = load pwd() + '.\\jenkinsfile.groovy'
+    flow.buildAndRun()
 }
